update the post